# ai-assisted-ticket-triage-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGES.md  Dockerfile  README.md  dev.sh  pyproject.toml  render.yaml  requirements.txt  triage.db
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  release.yml
app/: main.py
app/application/dto/: ticket_record.py  triage_result.py
app/application/ports/: classifier_port.py  similar_tickets_port.py  ticket_repository_port.py
app/application/use_cases/: add_ticket_comment.py  assign_ticket.py  create_ticket.py  escalate_ticket.py  get_dashboard_analytics.py  get_ticket.py  list_tickets.py  retrain_model.py  review_triage_decision.py  save_triage_decision.py  triage_ticket.py  update_ticket_status.py
app/domain/constants/: departments.py
app/domain/entities/: assignment.py  similar_case.py  ticket.py  ticket_event.py  triage_analysis.py  triage_decision.py
app/domain/enums/: ticket_category.py  ticket_priority.py  ticket_status.py
app/domain/rules/: priority_rules.py
app/infrastructure/ai/: baseline_classifier.py  litellm_classifier.py  ml_classifier.py  model_loader.py  rag_assisted_classifier.py  tfidf_similar_tickets.py  train_model.py
app/infrastructure/config/: settings.py
app/infrastructure/logging/: request_context.py  setup.py
app/infrastructure/persistence/: db.py  in_memory_ticket_repository.py  models.py  sqlite_migration.py  sqlite_ticket_repository.py
app/infrastructure/seeding/: demo_tickets.py
app/interfaces/api/: app.py  dependencies.py  middleware.py
app/interfaces/mappers/: ticket_mapper.py
data/: issues.csv
docs/adr/: 0001-clean-architecture.md  0002-litellm-for-triage.md  0003-test-pyramid.md  0004-retrieval-augmented-triage.md  README.md
e2e/: .gitignore  README.md  package.json  playwright.config.js
e2e/tests/: smoke.spec.js
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
scripts/: migrate_sqlite_to_database.py  seed_demo_tickets.py
tests/: conftest.py
tests/api/: test_assignment_status.py  test_dashboard_analytics.py  test_litellm_triage_endpoint.py  test_rag_integration.py  test_review_decision_status.py  test_system_endpoints.py  test_ticket_history.py  test_ticket_metadata_fields.py  test_ticket_workbench.py  test_ticket_workflow_actions.py  test_triage_endpoint.py
tests/application/: test_get_dashboard_analytics_use_case.py  test_triage_ticket_use_case.py
tests/unit/: test_database_url.py  test_priority_rules.py  test_rag_assisted_classifier.py  test_sqlite_migration.py  test_tfidf_similar_tickets.py
(+65 files in other folders)
