[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assisted-ticket-triage-platform"
version = "0.1.0"
description = "AI-assisted ticket triage platform with clean architecture, FastAPI backend and React/Vite frontend."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Claudio Vinci" }]

[tool.setuptools.packages.find]
include = ["app*"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
]

# ---------------------------------------------------------------------------
# Coverage (used when invoked via --cov=app, e.g. in CI)
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/main.py",
    "app/infrastructure/ai/train_model.py",
    "app/infrastructure/persistence/sqlite_migration.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 75

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 110
extend-exclude = [
    ".venv",
    "frontend",
    "e2e",
    "scripts/migrate_sqlite_to_database.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # handled by formatter
    "B008",  # FastAPI Depends() default
    "UP042", # StrEnum migration would change repr/serialization semantics
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["B011", "E402"]

# ---------------------------------------------------------------------------
# Bandit — security linter (scanned via CI)
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", ".venv", "frontend", "e2e", "scripts"]
skips = ["B101"]  # assert_used — fine inside helpers/tests
